# DSSATLM-AgNeSy

./: .gitignore  README.md  main.py  pyproject.toml
services/weather-api/: .env.example  .gitignore  README.md  pyproject.toml  run.py
services/weather-api/src/weather_api/: auth.py  config.py  data.py  main.py  routes.py  schemas.py
services/weather-api/tests/: test_routes.py
