[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather-api"
version = "0.1.0"
description = "FastAPI service for DAYMET weather data (DSSATLM-AgNeSy)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/weather_api"]

[tool.pytest.ini_options]
pythonpath = ["."]





